# TuiToolsetsForHpc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml
csrc/: pybind.cpp
csrc/component/: input_form.cpp  matrix_frame.cpp  radio_frame.cpp  resizable4block.cpp
csrc/include/: tui_tool_sets.hpp  tui_tool_sets_runable.hpp  utils.hpp
csrc/runable/: diff.cpp  print_matrix.cpp
src/tui_toolsets/: __init__.py
tools/: merge_static_libs.cmake
