[build-system]
requires = ["scikit-build-core>=0.3.3"]
build-backend = "scikit_build_core.build"


[project]
name = "tui_toolsets"
version = "0.0.1"
description="A minimal example package (with pybind11)"
readme = "README.md"
authors = [
  { name = "HeduAiDev", email = "1297416662@qq.com" },
]
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.source-dir = "."
wheel.cmake = true
